# pisa-runtime

./: .gitmodules  CMakeLists.txt
cmake/: CompilerWarnings.cmake
include/: query_processor.hpp  simdbp_query_processor.hpp
src/: CMakeLists.txt  app.hpp  query.cpp  simdbp_query_processor.cpp
